test/extra/negative/multipleDef.net
INPUT a
OUTPUT r
VAR a, r
IN
r = a
r = NOT a
